--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -63,13 +63,21 @@
         <version>9.0.16</version>
     </dependency>
 	</dependencies>
-
+<build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-clean-plugin</artifactId>
+            <version>3.1.0</version> <!-- Use a version compatible with your Maven installation -->
+        </plugin>
+        <!-- Other plugins -->
+    </plugins>
+</build>
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>3.3.5</version>
 				<configuration>
 					<excludes>
 						<exclude>
